tests/ui/coherence/coherence-with-generator.stock.stderr
error[E0119]: conflicting implementations of trait `Trait` for type `Wrapper<OpaqueGenerator>`
  --> $DIR/coherence-with-generator.rs:22:1
   |
LL | impl Trait for Wrapper<OpaqueGenerator> {}
   | --------------------------------------- first implementation here
LL | impl<T: Sync> Trait for Wrapper<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Wrapper<OpaqueGenerator>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
